start update content 2018

--- a/source/index.html
+++ b/source/index.html
@@ -154,9 +154,9 @@
         </svg>
       </h1>
 
-      <p>6ª edição - 1 de Julho</p>
+      <p>7ª edição - 14 de Julho</p>
 
-      <a class="button" href="https://www.eventick.com.br/frontinsampa-2017" role="button" aria-label="Faça sua inscrição em nosso evento" target="_blank" data-id="ticket-button">Inscreva-se</a>
+      <a class="button" href="" role="button" aria-label="Faça sua inscrição em nosso evento" target="_blank" data-id="ticket-button">Inscreva-se</a>
     </section>
 
     <section class="section-group info" id="sobre-nos">
@@ -190,7 +190,8 @@
         </div>
 
         <div class="description">
-          <p>Devido ao feedback tão positivo do pessoal sobre o evento no Teatro... do Colégio Maria Imaculada, no bairro do Paraíso, decidimos realizar o Frontinsampa 2017 novamente no local, mas... devido algumas solicitações e a necessidade de um lugar maior e com uma infraestrutura melhor, mudamos novamente e escolhemos o <strong>Teatro do hotel Maksoud Plaza</strong>, que está localizado a uma quadra da Paulista, a avenida mais importante de São Paulo, e próximo à efervescente vida cultural e gastronômica da capital paulistana. Convenientemente localizado no centro financeiro da cidade, o hotel tem fácil acesso aos aeroportos de Guarulhos e Congonhas.</p>
+        <p>O mais tradicional evento sobre front-end de São Paulo chega a sua 7ª edição em 2018. De volta ao<strong>Teatro do Maksoud Plaza Hotel</strong>, vamos reunir a comunidade em Julho em torno do melhor conteúdo sobre desenvolvimento de interfaces através de apresentações inesquecíveis.
+</p>
 
           <p>
             <svg>
@@ -198,7 +199,7 @@
               <use xlink:href="#camera-icon"></use>
             </svg>
 
-            <a href="https://www.youtube.com/playlist?list=PLnjYA3TxpDpgjlz3uU5Racut2yEpD7BFV" target="_blank">Veja como foi a última edição</a>
+            <a href="https://www.youtube.com/playlist?list=PLnjYA3TxpDpi3grnEzNzxtnzHdRKe_5r0" target="_blank">Veja como foi a última edição</a>
           </p>
 
           <p>Anos anteriores</p>
@@ -219,6 +220,9 @@
             <li>
               <a href="/2016" target="_blank" aria-label="Ir para o site da edição de 2016">2016</a>
             </li>
+            <li>
+              <a href="/2017" target="_blank" aria-label="Ir para o site da edição de 2017">2017</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -227,9 +231,7 @@
     <section class="section-group speaker-list" id="palestrantes">
       <h2 class="heading-highlight">Palestrantes</h2>
 
-      <!-- Speakers JS component Reference. -->
-      <div class="container" data-speaker></div>
-      <!-- I pray for a world with + [data-attr] and - .class manipulation. -->
+      <h3>Em breve!!!</h3>
     </section>
 
     <section class="section-group schedule" id="programacao">
@@ -256,12 +258,6 @@
             <i></i>
           </div>
         </div>
-        <h2 class="heading-highlight">Programação</h2>
-
-        <!-- Timeline JS Component Reference. -->
-        <div class="schedule-timeline" data-schedule data-timeline></div>
-        <p class="details">Horários e ordem das apresentações poderão ser alterados até a data do evento!</p>
-        <!-- I pray for a world with + [data-attr] and - .class manipulation. -->
       </div>
     </section>
 
@@ -274,137 +270,6 @@
           <p>R. São Carlos do Pinhal, 424 - Bela Vista, São Paulo</p>
 
           <a class="button" href="https://goo.gl/maps/yF3bHmXUBav" role="button" aria-label="Confira a localização do evento no Google Maps" target="_blank">Ver no mapa</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section-group sponsors" id="patrocinadores">
-      <div class="container">
-        <h2 class="heading-highlight">Patrocinadores</h2>
-
-        <div class="sponsors-group">
-          <h3 class="heading-large">Diamante</h3>
-
-          <ul>
-            <li>
-              <a href="http://www.anenglishthing.com.br/?utm_source=frontinsampa2017&utm_campaign=patrocinio&utm_medium=banner" target="_blank" class="sponsor-item">
-                <img src="assets/images/logo-an-english-thing.png" alt="logo An English Thing">
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="sponsors-group">
-          <h3 class="heading-medium">Prata</h3>
-
-          <ul class="list-item">
-            <li>
-              <a href="https://www.toptal.com/?utm_source=frontinsampa2017&utm_campaign=sponsor&utm_medium=banner" target="_blank" class="sponsor-item">
-                <img src="assets/images/logo-toptal.png" alt="logo toptal">
-              </a>
-            </li>
-            <li>
-              <a href="https://automattic.com/?utm_source=frontinsampa2017&utm_campaign=sponsor&utm_medium=banner" target="_blank" class="sponsor-item">
-                <img src="assets/images/logo-automattic.png" alt="logo Automattic" width="300">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.back4app.com/?utm_source=frontinsampa2017&utm_campaign=sponsor&utm_medium=banner" target="_blank" class="sponsor-item">
-                <img src="assets/images/logo-back4app-blue.svg" alt="logo Back4app" width="225">
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="sponsors-group">
-          <h3 class="heading-small">Bronze</h3>
-
-          <ul class="list-item">
-            <li>
-              <a href="https://www.evino.com.br/?utm_source=frontinsampa2017&utm_campaign=sponsor&utm_medium=banner" target="_blank" class="sponsor-item">
-                <img src="assets/images/logo-evino.png" alt="Logo E-vino" >
-              </a>
-            </li>
-            <li>
-              <a href="https://gravento.com.br/?utm_source=frontinsampa2017&utm_campaign=sponsor&utm_medium=banner" target="_blank" class="sponsor-item">
-                <img src="assets/images/logo-gravento.svg" alt="Logo Gravento" width="160">
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="sponsors-group">
-          <h3 class="heading-small">Evento Parceiro</h3>
-
-          <ul>
-            <li>
-              <a href="https://jsexperience2017.imasters.com.br/?utm_source=frontinsampa&utm_campaign=friendEvent&utm_medium=banner" target="_blank" class="sponsor-item">
-                <img src="assets/images/js-experience-2017.jpg" alt="Js Experience 2017">
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="sponsors-group sponsors-group-support">
-          <h3 class="heading-small">Apoio</h3>
-
-          <ul class="list-item">
-            <li>
-              <a href="https://github.com/frontendbr/" aria-label="Ir para o github do frontendbrasil">
-                <img src="assets/images/github-frontendbrasil.jpg" alt="Logo FrontendBrasil">
-              </a>
-            </li>
-            <li>
-              <a href="http://frontendweek.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site frontendweek">
-                <img src="assets/images/frontend-week.jpg" alt="Logo Frontend Week São Paulo">
-              </a>
-            </li>
-            <li>
-              <a href="http://devnaestrada.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site dev na estrada">
-                <img src="assets/images/dev-na-estrada.jpg" alt="Logo Dev na Estrada">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.stickersdevs.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site do StyckersDev">
-                <img src="assets/images/stickers-dev.jpg" alt="Logo StickersDev">
-              </a>
-            </li>
-            <li>
-              <a href="https://gravento.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site da Gravento">
-                <img src="assets/images/gravento.jpg" alt="Logo Gravento">
-              </a>
-            </li>
-            <li>
-              <a href="http://reprograma.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site do Reprograma">
-                <img src="assets/images/reprograma.jpg" alt="Logo Reprograma">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.eucompraria.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site do Eu compraria">
-                <img src="assets/images/eu-compraria.jpg" alt="Logo Eu compraria">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.meetup.com/pt-BR/Codamos-Club/" aria-label="Ir para o site do Codamos Club">
-                <img src="assets/images/codamos.png" alt="Logo Codamos Club">
-              </a>
-            </li>
-            <li>
-              <a href="https://novatec.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site da Editora Novatec">
-                <img src="assets/images/novatec.jpg" alt="Logo Editora Novatec">
-              </a>
-            </li>
-            <li>
-              <a href="http://www.mergo.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site da Mergo">
-                <img src="assets/images/mergo-frontinsampa.png" alt="Logo Mergo">
-              </a>
-            </li>
-            <li>
-              <a href="http://www.webtatica.com.br/?utm_source=frontinsampa-2017&utm_medium=logo&utm_campaign=apoio" aria-label="Ir para o site da Webtatica">
-                <img src="assets/images/webtatica-frontinsampa.jpg" alt="Logo da Webtatica">
-              </a>
-            </li>
-          </ul>
         </div>
       </div>
     </section>
@@ -541,14 +406,14 @@
 
     <script>
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-32925160-1']);
-      _gaq.push(['_trackPageview']);
-      _gaq.push(['_trackPageLoadTime']);
-      (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
+        _gaq.push(['_setAccount', 'UA-32925160-1']);
+        _gaq.push(['_trackPageview']);
+        _gaq.push(['_trackPageLoadTime']);
+        (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
