--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Frontinsampa 2017 - 6ª edição 1 de Julho </title>
+    <title>Frontinsampa 2018 - 7ª edição 14 de Julho </title>
 
     <script>
     !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -19,20 +19,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Frontinsampa - 6ª edição do maior evento de desenvolvimento front-end em São Paulo" />
+    <meta name="description" content="Frontinsampa - 7ª edição do maior evento de desenvolvimento front-end em São Paulo" />
     <meta name="keywords" content="desenvolvedor frontend, desenvolvedor front-end, front-end em são paulo, eventos de front-end em são paulo, frontinsampa, frontinsampa 2017, eventos de desenvolvimento, desenvolvimento, front-end, html, css, javascript, js" />
 
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:url" content="http://www.frontinsampa.com.br" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Frontinsampa 2017 - 6ª edição, estamos de volta!" />
+    <meta property="og:title" content="Frontinsampa 2017 - 7ª edição, estamos de volta!" />
     <meta property="og:site_name" content="Frontinsampa" />
-    <meta property="og:description" content="Aprender, compartilhar e se divertir, essa é a missão do Frontinsampa. Estamos de volta! 01 de Julho de 2017 em São Paulo." />
+    <meta property="og:description" content="Aprender, compartilhar e se divertir, essa é a missão do Frontinsampa. Estamos de volta! 14 de Julho de 2018 em São Paulo." />
     <meta property="og:image" content="http://www.frontinsampa.com.br/assets/images/social.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Frontinsampa 2017 - 6ª edição, estamos de volta!" />
-    <meta name="twitter:description" content="Aprender, compartilhar e se divertir, essa é a missão do Frontinsampa. Estamos de volta! 01 de Julho de 2017 em São Paulo." />
+    <meta name="twitter:title" content="Frontinsampa 2017 - 7ª edição, estamos de volta!" />
+    <meta name="twitter:description" content="Aprender, compartilhar e se divertir, essa é a missão do Frontinsampa. Estamos de volta! 14 de Julho de 2018 em São Paulo." />
     <meta name="twitter:site" content="@frontinsp" />
     <meta name="twitter:image" content="http://www.frontinsampa.com.br/assets/images/social.png" />
 
@@ -46,360 +46,13 @@
     <!-- endinject -->
   </head>
 
-  <body class="is-normal">
-    <input tabindex="1" data-check aria-label="Se estiver em um dispositivo móvel, selecione este item, para exibir o Menu de navegação" type="checkbox" name="menu-control" class="menu-control" id="menu-control">
-    <div style="display: none;">
-      <!-- inject:svg -->
-      <!-- endinject -->
-    </div>
+  <body>
 
-    <nav class="menu">
-      <div data-font-size data-font-size-min="90" data-font-size-max="110">
-        <button tabindex="1" title="Diminua o tamanho da fonte" type="button" class="btn-size" data-font-size-less style="right: 7%;">
-          <svg>
-            <title>Ícone para diminuir o tamanho da fonte</title>
-            <use xlink:href="#font-size"></use>
-          </svg>
-        </button>
+    <!-- <img src="images/logo-frontinsampa.jpg" alt="Logo do frontinsampa 2018"> -->
+    <h1 class="title">Frontinsampa 2018</h1>
+    <h2 class="subtitle">Dia 14 de Julho - Teatro do Hotel Maksoud Plaza</h2>
+    <a href="" class="ticket-button">Garanta o seu !!!</a>
 
-        <button tabindex="1" title="Aumente o tamanho da fonte" type="button" class="btn-size" data-font-size-more>
-          <svg>
-            <title>Ícone para aumentar o tamanho da fonte</title>
-            <use xlink:href="#font-size"></use>
-          </svg>
-        </button>
-      </div>
-
-      <button tabindex="1" title="Alto contraste" type="button" class="btn-invert" data-invert-color>
-        <svg>
-          <title>Ícone de conta gotas</title>
-          <use xlink:href="#invert-color"></use>
-        </svg>
-      </button>
-
-      <label for="menu-control" class="menu-button" data-menu-mobile role="button">
-        <svg viewBox="0 0 24 24" class="icon-menu" xmlns="http://www.w3.org/2000/svg" aria-labelledby="title" role="img">
-          <title>Ícone para exibir Menu</title>
-          <path d="M21.7,1.2H2.3C1,1.2,0,2.2,0,3.5s1,2.3,2.3,2.3h19.4c1.3,0,2.3-1,2.3-2.3S23,1.2,21.7,1.2z"></path>
-          <path d="M21.7,9.7H2.3C1,9.7,0,10.7,0,12s1,2.3,2.3,2.3h19.4c1.3,0,2.3-1,2.3-2.3S23,9.7,21.7,9.7z"></path>
-          <path d="M21.7,18.2H2.3c-1.3,0-2.3,1-2.3,2.3c0,1.3,1,2.3,2.3,2.3h19.4c1.3,0,2.3-1,2.3-2.3C24,19.2,23,18.2,21.7,18.2z"></path>
-        </svg>
-        <svg viewBox="0 0 32 32" class="icon-close-menu" xmlns="http://www.w3.org/2000/svg" aria-labelledby="title" role="img">
-          <title>Ícone para fechar o menu</title>
-          <path d="M21.419 16l9.471-9.471c1.497-1.497 1.497-3.923 0-5.419s-3.923-1.497-5.419 0l-9.471 9.471-9.471-9.497c-1.497-1.497-3.923-1.497-5.419 0s-1.497 3.923 0 5.419l9.471 9.497-9.497 9.471c-1.497 1.497-1.497 3.923 0 5.419 0.748 0.748 1.729 1.135 2.71 1.135s1.961-0.361 2.71-1.135l9.497-9.471 9.471 9.471c0.748 0.748 1.729 1.135 2.71 1.135s1.961-0.361 2.71-1.135c1.497-1.497 1.497-3.923 0-5.419l-9.471-9.471z"></path>
-        </svg>
-      </label>
-      <label for="menu-control" class="menu-overlay"></label>
-
-      <ul data-menu role="menubar">
-        <li><a tabindex="1" href="#sobre-nos" data-menu-link role="menuitem" aria-label="Saiba mais sobre o Frontinsampa 2017">Sobre nós</a></li>
-        <li><a tabindex="1" href="#palestrantes" data-menu-link role="menuitem" aria-label="Confira os palestrantes do evento">Palestrantes</a></li>
-        <li><a tabindex="1" href="#programacao" data-menu-link role="menuitem" aria-label="Confira a programação do evento">Programação</a></li>
-        <li><a tabindex="1" href="#local" data-menu-link role="menuitem" aria-label="Saiba aonde será realizado o evento">Local</a></li>
-        <li><a tabindex="1" href="#patrocinadores" data-menu-link role="menuitem" aria-label="Confira a empresas que patrocinam o evento">Patrocinadores</a></li>
-        <li><a tabindex="1" href="#contato" data-menu-link="contact" role="menuitem" aria-label="Entre em contato conosco">Contato</a></li>
-        <li><a tabindex="1" href="https://www.eventick.com.br/frontinsampa-2017" role="menuitem" aria-label="Faça agora sua inscrição" data-id="ticket-button">Inscreva-se</a></li>
-      </ul>
-    </nav>
-
-    <section class="section-group event">
-      <div class="colors-left">
-        <div class="colors-left-line1">
-          <i></i>
-          <i></i>
-          <i></i>
-          <i></i>
-        </div>
-        <div class="colors-left-line2">
-          <i></i>
-          <i></i>
-          <i></i>
-          <i></i>
-        </div>
-        <div class="colors-left-line3">
-          <i></i>
-          <i></i>
-          <i></i>
-        </div>
-        <div class="colors-left-line4">
-          <i></i>
-        </div>
-      </div>
-      <div class="colors-right">
-        <div class="colors-right-line1">
-          <i></i>
-          <i></i>
-          <i></i>
-          <i></i>
-        </div>
-        <div class="colors-right-line2">
-          <i></i>
-          <i></i>
-          <i></i>
-          <i></i>
-        </div>
-        <div class="colors-right-line3">
-          <i></i>
-          <i></i>
-          <i></i>
-          <i></i>
-        </div>
-      </div>
-
-      <h1 class="logo">
-        <span>Frontinsampa 2017</span>
-        <svg>
-          <title>Frontinsampa 2017</title>
-          <use xlink:href="#logo"></use>
-        </svg>
-      </h1>
-
-      <p>7ª edição - 14 de Julho</p>
-
-      <a class="button" href="" role="button" aria-label="Faça sua inscrição em nosso evento" target="_blank" data-id="ticket-button">Inscreva-se</a>
-    </section>
-
-    <section class="section-group info" id="sobre-nos">
-
-      <div class="container">
-        <div class="colors-left">
-          <div class="colors-left-line1">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line2">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line3">
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line4">
-            <i></i>
-          </div>
-        </div>
-
-        <div class="slogan">
-          <h2 class="heading-medium">Aprender, compartilhar e se Divertir.</h2>
-        </div>
-
-        <div class="description">
-        <p>O mais tradicional evento sobre front-end de São Paulo chega a sua 7ª edição em 2018. De volta ao<strong>Teatro do Maksoud Plaza Hotel</strong>, vamos reunir a comunidade em Julho em torno do melhor conteúdo sobre desenvolvimento de interfaces através de apresentações inesquecíveis.
-</p>
-
-          <p>
-            <svg>
-              <title>Ícone de vídeo</title>
-              <use xlink:href="#camera-icon"></use>
-            </svg>
-
-            <a href="https://www.youtube.com/playlist?list=PLnjYA3TxpDpi3grnEzNzxtnzHdRKe_5r0" target="_blank">Veja como foi a última edição</a>
-          </p>
-
-          <p>Anos anteriores</p>
-
-          <ul class="info-previous">
-            <li>
-              <a href="/2012" target="_blank" aria-label="Ir para o site da edição de 2012">2012</a>
-            </li>
-            <li>
-              <a href="/2013" target="_blank" aria-label="Ir para o site da edição de 2013">2013</a>
-            </li>
-            <li>
-              <a href="/2014" target="_blank" aria-label="Ir para o site da edição de 2014">2014</a>
-            </li>
-            <li>
-              <a href="/2015" target="_blank" aria-label="Ir para o site da edição de 2015">2015</a>
-            </li>
-            <li>
-              <a href="/2016" target="_blank" aria-label="Ir para o site da edição de 2016">2016</a>
-            </li>
-            <li>
-              <a href="/2017" target="_blank" aria-label="Ir para o site da edição de 2017">2017</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section class="section-group speaker-list" id="palestrantes">
-      <h2 class="heading-highlight">Palestrantes</h2>
-
-      <h3>Em breve!!!</h3>
-    </section>
-
-    <section class="section-group schedule" id="programacao">
-      <div class="container">
-        <div class="colors-left">
-          <div class="colors-left-line1">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line2">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line3">
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line4">
-            <i></i>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section-group local" id="local">
-      <div class="container">
-        <h2 class="heading-highlight">Local</h2>
-
-        <div class="local-info">
-          <h3>Teatro do Hotel Maksoud Plaza</h3>
-          <p>R. São Carlos do Pinhal, 424 - Bela Vista, São Paulo</p>
-
-          <a class="button" href="https://goo.gl/maps/yF3bHmXUBav" role="button" aria-label="Confira a localização do evento no Google Maps" target="_blank">Ver no mapa</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section-group staff">
-      <div class="container">
-        <h2 class="heading-large">Apresentação</h2>
-
-        <ul class="staff-list">
-          <li>
-             <a href="https://twitter.com/mtmr0x" target="_blank" title="Ir para o twitter de Matheus Marsiglio">
-                <img src="./assets/images/matheus-marsiglio-frontinsampa.jpg" alt="Matheus Marsiglio apresentará o Frontinsampa 2017">
-                <span class="text-info ">Matheus Marsiglio</span>
-              </a>
-          </li>
-        </ul>
-
-        <h2 class="heading-large">Curadoria</h2>
-
-        <ul class="staff-list">
-          <li>
-             <a href="https://twitter.com/elvisdetona" target="_blank" title="Ir para o twitter de Sergio Nascimento">
-                <img src="./assets/images/elvis-detona-frontinsampa.jpg" alt="Sergio Nascimento organizador do Frontinsampa 2017">
-                <span class="text-info ">Sergio Nascimento</span>
-              </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/deividmarques" target="_blank" title="Ir para o twitter de Deivid Marques">
-              <img src="./assets/images/deivid-marques-frontinsampa.jpg" alt="Deivid Marques organizador do Frontinsampa 2017">
-              <span class="text-info ">Deivid Marques</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/seescrevekeit" target="_blank" title="Ir para o twitter de Keit Oliveira">
-              <img src="./assets/images/keit-oliveira-frontinsampa.jpg" alt="Keit Oliveira organizadora do Frontinsampa 2017">
-              <span class="text-info ">Keit Oliveira</span>
-            </a>
-          </li>
-          <li>
-             <a href="https://twitter.com/marcobrunobr" target="_blank" title="Ir para o twitter de Marco Bruno">
-                <img src="./assets/images/marco-bruno-frontinsampa.jpg" alt="Marco Bruno colabora com o Frontinsampa 2017">
-                <span class="text-info ">Marco Bruno</span>
-              </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="section-group contact" id="contato">
-      <div class="container">
-        <div class="colors-left">
-          <div class="colors-left-line1">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line2">
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line3">
-            <i></i>
-            <i></i>
-            <i></i>
-          </div>
-          <div class="colors-left-line4">
-            <i></i>
-          </div>
-        </div>
-
-        <h2 class="heading-highlight">Contato</h2>
-        <h3 class="heading-small">QUER PATROCINAR? DÚVIDAS? SUGESTÕES?</h3>
-
-        <h4 class="heading-small">Escreva pra gente</h4>
-        <p><a href="mailto:frontinsampa@gmail.com">frontinsampa@gmail.com</a><p>
-
-        <h4 class="text-large">ACOMPANHE O FRONTINSAMPA ATRAVÉS DAS REDES SOCIAIS:</h4>
-
-        <ul>
-          <li>
-            <a href="https://www.instagram.com/frontinsampa/" aria-label="Ir para o Instagram do Front In Sampa" target="_blank">
-              <span aria-hidden="true">Instagram</span>
-              <svg width="30" height="30">
-                <title>Ícone do instagram</title>
-                <use xlink:href="#instagram"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://www.facebook.com/frontinsampa/" aria-label="Ir para o Facebook do Front In Sampa" target="_blank">
-              <span aria-hidden="true">Facebook</span>
-              <svg width="30" height="30">
-                <title>Ícone do Facebook</title>
-                <use xlink:href="#facebook"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://www.youtube.com/channel/UCwoGd_KU0OxiVT5r-rPrzWA" aria-label="Ir para o YouTube do Front In Sampa" target="_blank">
-              <span aria-hidden="true">YouTube</span>
-              <svg width="30" height="30">
-                <title>Ícone do Youtube</title>
-                <use xlink:href="#youtube"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/frontinsp" aria-label="Ir para o Twitter do Front In Sampa" target="_blank">
-              <span aria-hidden="true">Twitter</span>
-              <svg width="30" height="30">
-                <title>Ícone do Twitter</title>
-                <use xlink:href="#twitter"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="contact-links">
-        <div class="container">
-          <a href="http://pt-br.confcodeofconduct.com/" aria-label="Confira nosso Código de conduta" target="_blank">Código de conduta</a>
-        </div>
-      </div>
-    </section>
 
     <!-- inject:js -->
     <!-- endinject -->
