remove old files and set first version with content

--- a/source/index.html
+++ b/source/index.html
@@ -5,33 +5,21 @@
     <meta charset="UTF-8">
     <title>Frontinsampa 2018 - 7ª edição 14 de Julho </title>
 
-    <script>
-    !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-    n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-    document,'script','https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '1600534956864179'); // Insert your pixel ID here.
-      fbq('track', 'PageView');
-    </script>
-
-    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1600534956864179&ev=PageView&noscript=1" /></noscript>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="Frontinsampa - 7ª edição do maior evento de desenvolvimento front-end em São Paulo" />
-    <meta name="keywords" content="desenvolvedor frontend, desenvolvedor front-end, front-end em são paulo, eventos de front-end em são paulo, frontinsampa, frontinsampa 2017, eventos de desenvolvimento, desenvolvimento, front-end, html, css, javascript, js" />
+    <meta name="keywords" content="desenvolvedor frontend, front-end em são paulo, eventos de front-end em são paulo, frontinsampa, eventos de desenvolvimento, vuejs, reactjs, angular" />
 
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:url" content="http://www.frontinsampa.com.br" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Frontinsampa 2017 - 7ª edição, estamos de volta!" />
+    <meta property="og:title" content="Frontinsampa 2018 - 7ª edição, estamos de volta!" />
     <meta property="og:site_name" content="Frontinsampa" />
     <meta property="og:description" content="Aprender, compartilhar e se divertir, essa é a missão do Frontinsampa. Estamos de volta! 14 de Julho de 2018 em São Paulo." />
     <meta property="og:image" content="http://www.frontinsampa.com.br/assets/images/social.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Frontinsampa 2017 - 7ª edição, estamos de volta!" />
+    <meta name="twitter:title" content="Frontinsampa 2018 - 7ª edição, estamos de volta!" />
     <meta name="twitter:description" content="Aprender, compartilhar e se divertir, essa é a missão do Frontinsampa. Estamos de volta! 14 de Julho de 2018 em São Paulo." />
     <meta name="twitter:site" content="@frontinsp" />
     <meta name="twitter:image" content="http://www.frontinsampa.com.br/assets/images/social.png" />
@@ -48,14 +36,11 @@
 
   <body>
 
-    <!-- <img src="images/logo-frontinsampa.jpg" alt="Logo do frontinsampa 2018"> -->
-    <h1 class="title">Frontinsampa 2018</h1>
-    <h2 class="subtitle">Dia 14 de Julho - Teatro do Hotel Maksoud Plaza</h2>
-    <a href="" class="ticket-button">Garanta o seu !!!</a>
-
-
-    <!-- inject:js -->
-    <!-- endinject -->
+    <main class="main">
+      <h1 class="title">Frontinsampa 2018</h1>
+      <h2 class="subtitle">Dia 14 de Julho <br> Teatro do Hotel Maksoud Plaza</h2>
+      <a href="" class="ticket-button" aria-label="Ir para o site de compra do ingresso" role="button">Garanta o seu !!!</a>
+    </main>
 
     <script>
       var _gaq = _gaq || [];
