--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,7 @@
     <main class="main">
       <h1 class="title">Frontinsampa 2018</h1>
       <h2 class="subtitle">Dia 14 de Julho <br> Teatro do Hotel Maksoud Plaza</h2>
-      <a href="" class="ticket-button" aria-label="Ir para o site de compra do ingresso" role="button">Garanta o seu !!!</a>
+      <a href="https://www.sympla.com.br/front-in-sampa-2018__193402" class="ticket-button" aria-label="Ir para o site de compra do ingresso" role="button">INSCREVA-SE</a>
     </main>
 
     <script>
